--- a/css/styles.css
+++ b/css/styles.css
@@ -18,13 +18,24 @@ body {
 }
 
 /* reset styles */
-.link {
+
+
+a {
   text-decoration: none;
   color: currentColor;
 }
-.list {
-  list-style: none;
+
+h1,h2,h3,h4,h5,h6,p{
+  margin: 0;
 }
+
+ul,ol{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+
+}
+
 
 /* Header */
 .header-nav-link {
