--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
   --accent-txt-cl: #fff;
 
   /* bg colors */
-  --bg-cl: ;
+  --bg-img: url(../imanges/bg.jpg);
 
   /* others */
 }
@@ -15,6 +15,7 @@
 body {
   font-family: var(--main-font);
   color: var(--main-txt-cl);
+  background-image: var(--bg-img);
 }
 
 /* reset styles */
@@ -68,17 +69,15 @@ img {
   padding-right: 100px;
   outline: 2px solid red;
   outline-offset: -2px;
-
 }
 
-.section{
+.section {
   padding-top: 50px;
   padding-bottom: 50px;
- 
 }
 /* Header */
+
 .header {
-  background-color: black;
 }
 .header-container {
   display: flex;
@@ -136,13 +135,23 @@ img {
 
 /* Hero */
 .hero {
-  background-color: black;
+  background-image: url(../imanges/hero/hero1.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  max-width: 1200px;
+  height: 670px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .hero-title {
   font-size: 36px;
   line-height: calc(72 / 36);
   color: var(--accent-txt-cl);
   text-align: center;
+  margin-top: 20px;
+  margin-bottom: 300px;
+  margin-left: 0;
+  margin-right: 755px;
 }
 
 .hero-subtitle {
@@ -150,11 +159,12 @@ img {
   line-height: calc(72 / 36);
   color: var(--accent-txt-cl);
   text-align: center;
+ margin-left: 610px;
+ 
 }
 
 /* Advantages */
 .advantages {
-  background-color: black;
 }
 
 .advantages-container {
@@ -183,7 +193,6 @@ img {
 
 /* Product range */
 .products {
-  background-color: black;
 }
 
 .products-container {
@@ -196,7 +205,7 @@ img {
   color: var(--accent-txt-cl);
   text-transform: uppercase;
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 
 .products-list {
@@ -260,7 +269,6 @@ img {
 
 /* Delivery */
 .delivery {
-  background-color: black;
 }
 
 .delivery-container {
@@ -280,7 +288,6 @@ img {
   padding-bottom: 5px;
 }
 
-
 .delivery-list-text {
   font-size: 24px;
   line-height: calc(48 / 24);
@@ -290,7 +297,6 @@ img {
 
 /* Footer */
 .footer {
-  background-color: black;
 }
 
 .footer-container {
