--- a/css/styles.css
+++ b/css/styles.css
@@ -67,8 +67,7 @@ img {
   margin-left: auto;
   padding-left: 100px;
   padding-right: 100px;
-  outline: 2px solid red;
-  outline-offset: -2px;
+ 
 }
 
 .section {
@@ -78,6 +77,7 @@ img {
 /* Header */
 
 .header {
+  
 }
 .header-container {
   display: flex;
@@ -116,6 +116,10 @@ img {
   padding-bottom: 34px;
 }
 
+.header-list{
+  display: flex;
+  gap: 20px;
+}
 .header-link {
   font-size: 20px;
   line-height: calc(40 / 20);
@@ -310,4 +314,10 @@ img {
   padding-top: 34px;
   padding-bottom: 34px;
   margin-left: 60px;
+  margin-right: 315px;
+}
+
+.footer-list{
+  display: flex;
+  gap: 20px;
 }
