--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,6 @@ img {
   margin-left: auto;
   padding-left: 100px;
   padding-right: 100px;
- 
 }
 
 .section {
@@ -77,7 +76,6 @@ img {
 /* Header */
 
 .header {
-  
 }
 .header-container {
   display: flex;
@@ -116,9 +114,10 @@ img {
   padding-bottom: 34px;
 }
 
-.header-list{
+.header-list {
   display: flex;
   gap: 20px;
+  align-items: flex-end;
 }
 .header-link {
   font-size: 20px;
@@ -126,6 +125,18 @@ img {
   text-align: center;
   padding-top: 34px;
   padding-bottom: 34px;
+}
+
+.socials-link {
+}
+
+.socials-icon-tg {
+ 
+}
+
+.socials-icon-inst {
+ 
+
 }
 
 .header-nav-link:hover,
@@ -142,6 +153,7 @@ img {
   background-image: url(../imanges/hero/hero1.jpg);
   background-repeat: no-repeat;
   background-position: center;
+
   max-width: 1200px;
   height: 670px;
   margin-left: auto;
@@ -163,8 +175,7 @@ img {
   line-height: calc(72 / 36);
   color: var(--accent-txt-cl);
   text-align: center;
- margin-left: 610px;
- 
+  margin-left: 610px;
 }
 
 /* Advantages */
@@ -317,7 +328,7 @@ img {
   margin-right: 315px;
 }
 
-.footer-list{
+.footer-list {
   display: flex;
   gap: 20px;
 }
