--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 :root {
   /* font */
   --main-font: "Roboto Condensed", sans-serif;
+  --second-font:"EB Garamon",sans-serif;
 
   /* txt colors */
   --main-txt-cl: #f19000;
@@ -134,17 +135,15 @@ img {
 
 .socials-link:hover,
 .socials-link:focus .socials-icon rect {
-  fill: var(--main-txt-cl); 
+  fill: var(--main-txt-cl);
   --color3: var(--main-txt-cl);
 }
 
-.socials-icon{
-  
+.socials-icon {
 }
 
-
 .socials-icon:hover rect {
-  fill: var(--main-txt-cl); 
+  fill: var(--main-txt-cl);
 }
 
 .header-nav-link:hover,
@@ -168,22 +167,70 @@ img {
   margin-right: auto;
 }
 .hero-title {
+
+  font-family: var(--second-font);
+  font-style: italic;
+  font-weight: 600;
   font-size: 36px;
   line-height: calc(72 / 36);
   color: var(--accent-txt-cl);
   text-align: center;
   margin-top: 20px;
-  margin-bottom: 300px;
+  margin-bottom: 280px;
   margin-left: 0;
   margin-right: 755px;
 }
 
 .hero-subtitle {
+  font-family: var(--second-font);
+  font-style: italic;
+  font-weight: 600;
   font-size: 36px;
-  line-height: calc(72 / 36);
+  line-height: calc(36 / 36);
   color: var(--accent-txt-cl);
   text-align: center;
   margin-left: 610px;
+  
+}
+
+.text-container {
+  font-size: 2em;
+}
+
+.animated-text {
+  opacity: 0;
+  display: inline-block;
+  animation: fadeIn 0.5s forwards;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
+
+.animated-text span {
+  opacity: 0;
+}
+
+.animated-text span.fade {
+  opacity: 1;
+  transition: opacity 0.1s;
+}
+
+.animated-subtitle {
+  font-size: 1.32em;
+  animation: fadeInOut 4s infinite;
+}
+
+@keyframes fadeInOut {
+  0%,
+  100% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
 }
 
 /* Advantages */
