--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 :root {
   /* font */
   --main-font: "Roboto Condensed", sans-serif;
-  --second-font:"EB Garamon",sans-serif;
+  --second-font:"Lobster",sans-serif;
 
   /* txt colors */
   --main-txt-cl: #f19000;
@@ -169,8 +169,7 @@ img {
 .hero-title {
 
   font-family: var(--second-font);
-  font-style: italic;
-  font-weight: 600;
+  
   font-size: 36px;
   line-height: calc(72 / 36);
   color: var(--accent-txt-cl);
@@ -183,8 +182,7 @@ img {
 
 .hero-subtitle {
   font-family: var(--second-font);
-  font-style: italic;
-  font-weight: 600;
+  
   font-size: 36px;
   line-height: calc(36 / 36);
   color: var(--accent-txt-cl);
@@ -219,7 +217,7 @@ img {
 }
 
 .animated-subtitle {
-  font-size: 1.32em;
+ 
   animation: fadeInOut 4s infinite;
 }
 
