--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
   /* bg colors */
   --bg-img: url(../imanges/bg.jpg);
 
+
   /* others */
 }
 
@@ -157,26 +158,52 @@ img {
 
 /* Hero */
 .hero {
-  background-image: url(../imanges/hero/hero1.jpg);
+  position: relative;
+
   background-repeat: no-repeat;
   background-position: center;
 
-  max-width: 1200px;
+  width: 1200px;
   height: 670px;
   margin-left: auto;
   margin-right: auto;
 }
+
+.hero-container{
+  
+}
+
+
+.carousel {
+}
+
+.slide {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+  transform: translate(-8.05%, -8.05%);
+}
+
+.slide.active {
+  opacity: 1;
+}
+
+
 .hero-title {
 
   font-family: var(--second-font);
   
   font-size: 36px;
   line-height: calc(72 / 36);
-  color: var(--accent-txt-cl);
+  color: var(--main-txt-cl);
   text-align: center;
-  margin-top: 20px;
-  margin-bottom: 280px;
-  margin-left: 0;
+  margin-top: 50px;
+  margin-bottom: 400px;
+  margin-left: 50px;
   margin-right: 755px;
 }
 
