--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -1,4 +1,9 @@
 .section {
+  padding-top: 35px;
+  padding-bottom: 35px;
+
+  @media screen and (min-width: 1200px) {
     padding-top: 50px;
     padding-bottom: 50px;
   }
+}
