--- a/css/main.css
+++ b/css/main.css
@@ -76,16 +76,40 @@ img {
 }
 
 .container {
-  width: 1200px;
   margin-right: auto;
   margin-left: auto;
-  padding-left: 100px;
-  padding-right: 100px;
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 450px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 700px;
+    padding-left: 34px;
+    padding-right: 34px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+    padding-left: 100px;
+    padding-right: 100px;
+  }
 }
 
 .section {
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 35px;
+  padding-bottom: 35px;
+}
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
 }
 
 .logo {
