--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,11 +16,11 @@
 @import './components/slide';
 @import './components/textanimated';
 @import './components/blok';
+@import './components/mobile-menu';
 
 //layout styles
 @import './layout/header';
 @import './layout/nav';
-@import './layout/contacts';
 @import './layout/socials';
 @import './layout/hero';
 @import './layout/advantages';
