--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,6 +1,14 @@
 .container {
     margin-right: auto;
     margin-left: auto;
+
+    @media screen and (min-width: 320px){
+      width: 290px;
+  
+      padding-left: 15px;
+      padding-right: 15px;
+    
+    }    
    
   @media screen and (min-width: 480px){
     width: 450px;
