--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,7 +3,7 @@
     align-items: center;
   }
   
-.footer__link {
+.footer__phone{
     font-size: 24px;
     line-height: calc(48 / 24);
     text-align: center;
