--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,3 +3,16 @@
     align-items: center;
   }
   
+  .header__phone {
+    display: none;
+
+    font-size: 20px;
+    line-height: calc(40 / 20);
+    text-align: center;
+    padding-top: 34px;
+    padding-bottom: 34px;
+  
+      &:hover,
+      &:focus {
+    color: var(--accent-txt-cl);}
+  }  
