--- a/sass/layout/_socials.scss
+++ b/sass/layout/_socials.scss
@@ -1,3 +1,13 @@
+.socials__list {
+   display: none;
+
+  /*display: flex;
+  gap: 20px;
+  align-items: center;*/
+}
+
+
+
 .socials__link {
     padding-top: 34px;
     padding-bottom: 34px;
