--- a/css/main.css
+++ b/css/main.css
@@ -213,6 +213,8 @@ img {
 }
 
 .menu-container {
+  display: flex;
+  flex-direction: column;
   margin-left: auto;
   max-width: 300px;
   height: 100%;
