--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -16,3 +16,32 @@
       &:focus {
     color: var(--accent-txt-cl);}
   }  
+
+  .header__list{
+    display: none;
+
+
+    /*display: flex;
+    gap: 20px;
+    align-items: center;*/
+  }
+
+  .header__link{
+    padding-top: 34px;
+    padding-bottom: 34px;
+  
+     &:hover,
+     &:focus {
+      fill: var(--main-txt-cl);
+       --color3: var(--main-txt-cl);}
+  }
+
+  .header--link:focus .header__icon rect {
+    fill: var(--main-txt-cl);
+    --color3: var(--main-txt-cl);
+  }
+  
+  .header__icon:hover rect {
+    fill: var(--main-txt-cl);
+  }
+
