--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -16,3 +16,29 @@
       &:focus {
     color: var(--accent-txt-cl);}
   }
+
+ .footer__list{
+  display: flex;
+  gap: 20px;
+  align-items: center;
+ } 
+
+ .footer__link {
+  padding-top: 34px;
+  padding-bottom: 34px;
+
+   &:hover,
+   &:focus {
+    fill: var(--main-txt-cl);
+     --color3: var(--main-txt-cl);}
+
+ }
+
+ .footer--link:focus .footer__icon rect {
+  fill: var(--main-txt-cl);
+  --color3: var(--main-txt-cl);
+}
+
+.footer__icon:hover rect {
+  fill: var(--main-txt-cl);
+}
