--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,46 +1,74 @@
-.menu-btn{
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
+.menu-btn {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
 
-    width: 32px;
-    height: 32px ;
+  background-color: transparent;
+  border: none;
 
-    background-color: transparent;
-    border: none;
+  cursor: pointer;
 
-    cursor: pointer;
+  margin-left: auto;
+}
 
+.menu-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+
+  width: 100%;
+  height: 100%;
+
+  background-color:transparent;
+}
+
+.menu-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  margin-left: auto;
+
+  max-width: 300px;
+  height: 100%;
+
+  background-color:#F000;
+
+  padding: 90px 50px;
+}
+
+.mobile-list {
+  margin-bottom: auto;
+}
+
+
+.mobile-link{
+    font-size: 20px;
+    line-height: calc(40 / 20);
+    text-align: center;
+    text-transform: uppercase; 
+   
+
+    &:hover{
+      color: var(--accent-txt-cl);
+    }   
 
 }
 
-.menu-overlay{
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 100;
+.mobile-phone{
+    margin-bottom: 40px;
+    
+    font-size: 20px;
+    line-height: calc(40 / 20);
+    text-align: center;
 
-    width: 100%;
-    height: 100%;
-    
-    background-color: transparent;
-    
+    &:hover {
+  color: var(--accent-txt-cl);}
+
 }
 
-.menu-container{
+.mobile-socials__list{
     display: flex;
-    flex-direction: column;
-    
-    margin-left: auto;
-
-    max-width: 300px;
-    height: 100%;
-
-    background-color:var(--bg-img);
-
-    padding: 90px 50px;
-}
-
-.mobile-list{
-
+    gap: 80px;
 }
