--- a/css/main.css
+++ b/css/main.css
@@ -195,11 +195,10 @@ img {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  width: 32px;
-  height: 32px;
   background-color: transparent;
   border: none;
   cursor: pointer;
+  margin-left: auto;
 }
 
 .menu-overlay {
@@ -215,11 +214,41 @@ img {
 .menu-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   margin-left: auto;
   max-width: 300px;
   height: 100%;
-  background-color: var(--bg-img);
+  background-color: rgba(255, 0, 0, 0);
   padding: 90px 50px;
+}
+
+.mobile-list {
+  margin-bottom: auto;
+}
+
+.mobile-link {
+  font-size: 20px;
+  line-height: 2;
+  text-align: center;
+  text-transform: uppercase;
+}
+.mobile-link:hover {
+  color: var(--accent-txt-cl);
+}
+
+.mobile-phone {
+  margin-bottom: 40px;
+  font-size: 20px;
+  line-height: 2;
+  text-align: center;
+}
+.mobile-phone:hover {
+  color: var(--accent-txt-cl);
+}
+
+.mobile-socials__list {
+  display: flex;
+  gap: 80px;
 }
 
 .header__container {
@@ -237,6 +266,31 @@ img {
 }
 .header__phone:hover, .header__phone:focus {
   color: var(--accent-txt-cl);
+}
+
+.header__list {
+  display: none;
+  /*display: flex;
+  gap: 20px;
+  align-items: center;*/
+}
+
+.header__link {
+  padding-top: 34px;
+  padding-bottom: 34px;
+}
+.header__link:hover, .header__link:focus {
+  fill: var(--main-txt-cl);
+  --color3: var(--main-txt-cl);
+}
+
+.header--link:focus .header__icon rect {
+  fill: var(--main-txt-cl);
+  --color3: var(--main-txt-cl);
+}
+
+.header__icon:hover rect {
+  fill: var(--main-txt-cl);
 }
 
 .nav {
@@ -259,31 +313,6 @@ img {
 }
 .nav__link:hover, .nav__link:focus {
   color: var(--accent-txt-cl);
-}
-
-.socials__list {
-  display: none;
-  /*display: flex;
-  gap: 20px;
-  align-items: center;*/
-}
-
-.socials__link {
-  padding-top: 34px;
-  padding-bottom: 34px;
-}
-.socials__link:hover, .socials__link:focus {
-  fill: var(--main-txt-cl);
-  --color3: var(--main-txt-cl);
-}
-
-.socials--link:focus .socials__icon rect {
-  fill: var(--main-txt-cl);
-  --color3: var(--main-txt-cl);
-}
-
-.socials__icon:hover rect {
-  fill: var(--main-txt-cl);
 }
 
 .hero {
@@ -478,4 +507,28 @@ img {
 }
 .footer__phone:hover, .footer__phone:focus {
   color: var(--accent-txt-cl);
+}
+
+.footer__list {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+
+.footer__link {
+  padding-top: 34px;
+  padding-bottom: 34px;
+}
+.footer__link:hover, .footer__link:focus {
+  fill: var(--main-txt-cl);
+  --color3: var(--main-txt-cl);
+}
+
+.footer--link:focus .footer__icon rect {
+  fill: var(--main-txt-cl);
+  --color3: var(--main-txt-cl);
+}
+
+.footer__icon:hover rect {
+  fill: var(--main-txt-cl);
 }/*# sourceMappingURL=main.css.map */
