--- a/scss/components/_mobile-menu.scss
+++ b/scss/components/_mobile-menu.scss
@@ -30,7 +30,7 @@
   pointer-events: none;
   visibility: hidden;
 
-  transition: opacity var(--anim-fast), visibility var(--anim-fast);
+  transition: opacity 250ms, visibility 250ms;
 
   @media screen and (min-width: 768px) {
     display: none;
@@ -46,6 +46,8 @@
 }
 
 .menu-container {
+position: relative;
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -55,12 +57,12 @@
   max-width: 300px;
   height: 100%;
 
-  background-color: #f000;
+  background-color:black;
 
   padding: 90px 50px;
 
   transform: translateX(100%);
-  transition: transform var(--anim-fast);
+  transition: transform 250ms ease-in-out;
 
   .menu-overlay.is-open & {
     transform: translateX(0);
