--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
   --main-txt-cl: #f19000;
   --accent-txt-cl: #fff;
   /* bg colors */
-  --bg-img: url(../imanges/bg.jpg);
+  --bg-img: url(../imanges/base/bg.jpg);
 }
 
 .visually-hidden {
@@ -61,6 +61,10 @@ p {
 
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
+  object-position: center;
 }
 
 .link {
@@ -121,20 +125,15 @@ img {
 .logo {
   padding-top: 10px;
   padding-bottom: 10px;
+  margin-left: 0;
 }
-@media screen and (min-widht: 768px) {
+
+@media screen and (min-width: 1200px) {
   .logo {
-    margin-right: 85px;
-  }
-}
-@media screen and (min-widht: 1200px) {
-  .logo {
-    margin-right: 184px;
     padding-top: 5px;
     padding-bottom: 5px;
   }
 }
-
 .slide {
   position: absolute;
   width: 100%;
@@ -546,22 +545,44 @@ img {
 }
 
 .footer__phone {
-  font-size: 24px;
+  font-size: 10px;
   line-height: 2;
   text-align: center;
-  padding-top: 34px;
-  padding-bottom: 34px;
-  margin-left: 60px;
-  margin-right: 315px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-right: auto;
+  margin-left: auto;
 }
 .footer__phone:hover, .footer__phone:focus {
   color: var(--accent-txt-cl);
 }
+@media screen and (min-width: 768px) {
+  .footer__phone {
+    font-size: 16px;
+    line-height: 2;
+    padding-top: 28px;
+    padding-bottom: 28px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__phone {
+    font-size: 24px;
+    line-height: 2;
+    padding-top: 34px;
+    padding-bottom: 34px;
+  }
+}
 
 .footer__list {
   display: flex;
-  gap: 20px;
+  gap: 10px;
   align-items: center;
+  margin-right: 0;
+}
+@media screen and (min-width: 768px) {
+  .footer__list {
+    gap: 20px;
+  }
 }
 
 .footer__link {
