--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -8,7 +8,7 @@
     --accent-txt-cl: #fff;
   
     /* bg colors */
-    --bg-img: url(../imanges/bg.jpg);
+    --bg-img: url(../imanges/base/bg.jpg);
   }
 
   
