--- a/css/main.css
+++ b/css/main.css
@@ -590,15 +590,5 @@ img {
   padding-bottom: 34px;
 }
 .footer__link:hover, .footer__link:focus {
-  fill: var(--main-txt-cl);
-  --color3: var(--main-txt-cl);
-}
-
-.footer--link:focus .footer__icon rect {
-  fill: var(--main-txt-cl);
-  --color3: var(--main-txt-cl);
-}
-
-.footer__icon:hover rect {
-  fill: var(--main-txt-cl);
+  --color3: var(--accent-txt-cl);
 }/*# sourceMappingURL=main.css.map */
