--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -52,16 +52,7 @@
 
   &:hover,
   &:focus {
-    fill: var(--main-txt-cl);
-    --color3: var(--main-txt-cl);
+    --color3: var(--accent-txt-cl);
   }
 }
 
-.footer--link:focus .footer__icon rect {
-  fill: var(--main-txt-cl);
-  --color3: var(--main-txt-cl);
-}
-
-.footer__icon:hover rect {
-  fill: var(--main-txt-cl);
-}
