--- a/scss/components/_logo.scss
+++ b/scss/components/_logo.scss
@@ -2,11 +2,24 @@
   padding-top: 10px;
   padding-bottom: 10px;
   margin-left: 0;
+
 }
 
-@media screen and (min-width: 1200px) {
-  .logo {
-    padding-top: 5px;
-    padding-bottom: 5px;
+.logo__item{
+
+  @media screen and (max-width:767px) {
+    width: 71px;
   }
+ 
+
+  @media screen and (min-width: 768px){
+   width: 116px;
+    
+  }
+  
+  @media screen and (min-width: 1200px) {
+    width: 157px;
+   
+  }
+
 }
