--- a/scss/layout/_advantages.scss
+++ b/scss/layout/_advantages.scss
@@ -1,25 +1,65 @@
 .advantages__container {
+  padding-right: 35px;
+  padding-left: 35px;
+
+  @media screen and (min-width: 768px) {
+    padding-left: 70px;
+    padding-right: 70px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding-left: 150px;
     padding-right: 150px;
-    padding-left: 150px;}
-  
-  
-  .advantages__item {
+  }
+}
+
+.advantages__item {
+  @media screen and (min-width: 768px) {
     display: flex;
     align-items: center;
+    gap: 128px;
+  }
+
+  @media screen and (min-width: 1200px) {
     gap: 160px;
   }
-  
-  .advantages__img {
-    border-radius: 50px;
+}
+
+.advantages__img {
+  border-radius: 50px;
+  margin-bottom: 25px;
+
+  @media screen and (min-width: 768px){
+    margin-bottom: 15px;
+
+  }
+
+  @media screen and (min-width: 1200px) {
     margin-bottom: 25px;
   }
-  
-  .advantages__text {
-    line-height: calc(32 / 16);
-    text-transform: uppercase;
-  }
- 
 
-  .text--light {
-    color: var(--accent-txt-cl);
+}
+
+.advantages__text {
+  font-size: 10px;
+  line-height: calc(20 / 10);
+  text-align: center;
+  text-transform: uppercase;
+
+  @media screen and (min-width: 768px){
+  font-size: 12px;
+  line-height: calc(24 / 12);
+  text-align: start;
+
   }
+
+  @media screen and (min-width: 1200px){
+    line-height: calc(32 / 16);
+  }
+
+
+}
+
+.text--light {
+  color: var(--accent-txt-cl);
+}
